feat: implement column number selection in editor

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: CreatorDB
+Theme Name: CreatorDB (Official)
 Theme URI: https://creatordb.app
 Author: CreatorDB
 Author URI: https://creatordb.app
